corrected shifting

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   --black: rgba(46, 49, 49, 1);
   --white: white;
   --padding: 2rem;
-  --font-size: calc(1rem + 0.5vw);
+  --font-size: clamp(1rem, 2.5vw, 3rem);
 }
 
 html {
@@ -83,6 +83,7 @@ color: var(--dark);
   min-width: 240px;
   width: 100%;
 }
+
 
 .row-reverse {
   flex-direction: row-reverse;
